--- a/client/src/assets/index.scss
+++ b/client/src/assets/index.scss
@@ -89,7 +89,7 @@ body {
             }
         }
 
-        .Medic {
+        .Athens-Bill {
             display: flex;
             position: relative;
             width: 100%;
@@ -149,6 +149,27 @@ body {
                     &:hover {
                         box-shadow: 1px 1px 10px 1px $main_server;
                     }
+                }
+            }
+        }
+
+        .Athens-Medic {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(20vmin, 1fr));
+            grid-auto-rows: 20vh;
+            grid-gap: 1vmin;
+
+            &-Item {
+                position: relative;
+                padding: 1vmin;
+                backdrop-filter: blur(10px);
+                color: #fff;
+                border-radius: 2vmin;
+                background-color: transparentize($main_color, 0.5);
+                
+                &:hover {
+                    border: .2vmin solid $main_server;
+                    cursor: pointer;
                 }
             }
         }
